--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
+.noise{
+    
+        background: radial-gradient(circle, rgba(255, 254, 254, 0.03) 1%, transparent 50%);
+        background-size: 10px 20px; /* Adjust grid size */
+      
+}
 
+.inner{
+        box-shadow: inset 10 50 20px #ee0000;
+}
